fixed main page footer alignment. "support" nav is active for its page.

--- a/master.css
+++ b/master.css
@@ -191,7 +191,6 @@ a:hover { color:#444 }
 	/*border-top:1px solid #446348;*/
 	text-align:left;
 	margin:0 auto;
-	overflow:visible;`
 }
 
 #left {
